Revert "[dev-v5] Fix for fluent badge on Firefox. (#4442)"
This reverts commit 104d3410ddca9c7116ecd661255039d82f9f94e2.

--- a/src/Core/Components/Badge/FluentBadge.razor.css
+++ b/src/Core/Components/Badge/FluentBadge.razor.css
@@ -22,16 +22,16 @@ fluent-badge[positioning='above-start'],
 fluent-counter-badge[positioning='before-top'],
 fluent-counter-badge[positioning='above-start'] {
   position: absolute;
-  top: calc(1 * var(--offset-y, 0px));
-  left: calc(1 * var(--offset-x, 0px));
+  top: calc(1 * attr(offset-y px, 0px));
+  left: calc(1 * attr(offset-x px, 0px));
   transform: translate(-50%, -50%);
 }
 
 fluent-badge[positioning='above'],
 fluent-counter-badge[positioning='above'] {
   position: absolute;
-  top: calc(1 * var(--offset-y, 0px));
-  left: calc(50% + 1 * var(--offset-x, 0px));
+  top: calc(1 * attr(offset-y px, 0px));
+  left: calc(50% + 1 * attr(offset-x px, 0px));
   transform: translate(-50%, -50%);
 }
 
@@ -40,16 +40,16 @@ fluent-badge[positioning='above-end'],
 fluent-counter-badge[positioning='after-top'],
 fluent-counter-badge[positioning='above-end'] {
   position: absolute;
-  top: calc(1 * var(--offset-y, 0px));
-  right: calc(-1 * var(--offset-x, 0px));
+  top: calc(1 * attr(offset-y px, 0px));
+  right: calc(-1 * attr(offset-x px, 0px));
   transform: translate(50%, -50%);
 }
 
 fluent-badge[positioning='after'],
 fluent-counter-badge[positioning='after'] {
   position: absolute;
-  top: calc(50% + var(--offset-y, 0px));
-  right: calc(-1 * var(--offset-x, 0px));
+  top: calc(50% + attr(offset-y px, 0px));
+  right: calc(-1 * attr(offset-x px, 0px));
   transform: translate(50%, -50%);
 }
 
@@ -58,16 +58,16 @@ fluent-badge[positioning='below-end'],
 fluent-counter-badge[positioning='after-bottom'],
 fluent-counter-badge[positioning='below-end'] {
   position: absolute;
-  bottom: calc(-1 * var(--offset-y, 0px));
-  right: calc(-1 * var(--offset-x, 0px));
+  bottom: calc(-1 * attr(offset-y px, 0px));
+  right: calc(-1 * attr(offset-x px, 0px));
   transform: translate(50%, 50%);
 }
 
 fluent-badge[positioning='below'],
 fluent-counter-badge[positioning='below'] {
   position: absolute;
-  bottom: calc(-1 * var(--offset-y, 0px));
-  left: calc(50% + 1 * var(--offset-x, 0px));
+  bottom: calc(-1 * attr(offset-y px, 0px));
+  left: calc(50% + 1 * attr(offset-x px, 0px));
   transform: translate(-50%, 50%);
 }
 
@@ -76,16 +76,16 @@ fluent-badge[positioning='below-start'],
 fluent-counter-badge[positioning='before-bottom'],
 fluent-counter-badge[positioning='below-start'] {
   position: absolute;
-  bottom: calc(-1 * var(--offset-y, 0px));
-  left: calc(1 * var(--offset-x, 0px));
+  bottom: calc(-1 * attr(offset-y px, 0px));
+  left: calc(1 * attr(offset-x px, 0px));
   transform: translate(-50%, 50%);
 }
 
 fluent-badge[positioning='before'],
 fluent-counter-badge[positioning='before'] {
   position: absolute;
-  top: calc(50% + var(--offset-y, 0px));
-  left: calc(1 * var(--offset-x, 0px));
+  top: calc(50% + attr(offset-y px, 0px));
+  left: calc(1 * attr(offset-x px, 0px));
   transform: translate(-50%, -50%);
 }
 
@@ -93,6 +93,6 @@ fluent-badge[positioning='center-center'],
 fluent-counter-badge[positioning='center-center'] {
   position: absolute;
   transform: translate(-50%, -50%);
-  left: calc(50% + 1* var(--offset-x, 0px));
-  top: calc(50% + var(--offset-y, 0px));
+  left: calc(50% + 1* attr(offset-x px, 0px));
+  top: calc(50% + attr(offset-y px, 0px));
 }
